; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_winsock.c_uv_get_extension_function.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_winsock.c_uv_get_extension_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIO_GET_EXTENSION_FUNCTION_POINTER = common dso_local global i32 0, align 4
@SOCKET_ERROR = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8**)* @uv_get_extension_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uv_get_extension_function(i32 %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @SIO_GET_EXTENSION_FUNCTION_POINTER, align 4
  %12 = load i8**, i8*** %7, align 8
  %13 = bitcast i8** %12 to i8*
  %14 = call i32 @WSAIoctl(i32 %10, i32 %11, i32* %6, i32 4, i8* %13, i32 8, i32* %9, i32* null, i32* null)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @SOCKET_ERROR, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i8**, i8*** %7, align 8
  store i8* null, i8** %19, align 8
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %4, align 4
  br label %23

21:                                               ; preds = %3
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %21, %18
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @WSAIoctl(i32, i32, i32*, i32, i8*, i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
